--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="dark">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tessy by Rabelus Lab</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+              mono: ['JetBrains Mono', 'monospace'],
+            },
+          },
+        },
+      }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -13,14 +26,23 @@
             --primary: #10b981;
             --secondary: #14b8a6;
             --accent: #84cc16;
-            --bg-dark: #0f172a;
+            --bg-body: #f8f9fa;
+            --text-body: #1e293b;
+            --bg-overlay: linear-gradient(rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.95));
+        }
+        .dark {
+            --bg-body: #0f172a;
+            --text-body: #ffffff;
+            --bg-overlay: linear-gradient(rgba(15, 23, 42, 0.75), rgba(15, 23, 42, 0.85));
+        }
+        * {
+            transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
         }
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg-dark);
-            color: #ffffff;
-            /* Imagem de rede neural tech em tons de verde */
-            background-image: linear-gradient(rgba(15, 23, 42, 0.75), rgba(15, 23, 42, 0.85)), url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop');
+            background-color: var(--bg-body);
+            color: var(--text-body);
+            background-image: var(--bg-overlay), url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -28,44 +50,64 @@
             height: 100vh;
         }
         .glass-panel {
-            background: rgba(15, 23, 42, 0.5);
+            background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
+            border: 2px solid rgba(16, 185, 129, 0.4);
+            box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.05);
+        }
+        .dark .glass-panel {
+            background: rgba(15, 23, 42, 0.5);
             border: 2px solid rgba(16, 185, 129, 0.3);
             box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.5);
         }
         .brutalist-button {
             border-radius: 0 !important;
             border: 2px solid rgba(16, 185, 129, 0.4);
-            box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.5);
+            box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
             transition: all 0.2s ease;
+        }
+        .dark .brutalist-button {
+            box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.5);
         }
         .brutalist-button:hover:not(:disabled) {
             transform: translate(-2px, -2px);
-            box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.6);
+            box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.15);
             border-color: var(--primary);
+        }
+        .dark .brutalist-button:hover:not(:disabled) {
+            box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.6);
         }
         .brutalist-button:active:not(:disabled) {
             transform: translate(1px, 1px);
+            box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.05);
+        }
+        .dark .brutalist-button:active:not(:disabled) {
             box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.4);
         }
         .custom-scrollbar::-webkit-scrollbar {
             width: 6px;
         }
         .custom-scrollbar::-webkit-scrollbar-track {
-            background: rgba(0, 0, 0, 0.1);
+            background: rgba(0, 0, 0, 0.05);
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: rgba(16, 185, 129, 0.5);
+            background: rgba(16, 185, 129, 0.3);
             border-radius: 0;
         }
+        .dark .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: rgba(16, 185, 129, 0.5);
+        }
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-            background: rgba(16, 185, 129, 0.8);
+            background: rgba(16, 185, 129, 0.6);
         }
         pre, code {
             font-family: 'JetBrains Mono', monospace;
         }
         .glow-text-green {
+            text-shadow: 0 0 10px rgba(16, 185, 129, 0.3);
+        }
+        .dark .glow-text-green {
             text-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
         }
     </style>
