--- a/index.html
+++ b/index.html
@@ -114,6 +114,36 @@
         .dark .glow-text-green {
             text-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
         }
+
+        /* --- Custom Animations --- */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes zoomIn {
+            from { transform: scale(0.95); opacity: 0; }
+            to { transform: scale(1); opacity: 1; }
+        }
+        @keyframes slideInLeft {
+            from { transform: translateX(-20px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
+        @keyframes slideInRight {
+            from { transform: translateX(20px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
+        @keyframes pulseSoft {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.6; }
+        }
+
+        .animate-fade-in { animation: fadeIn 0.3s ease-out forwards; }
+        .animate-zoom-in { animation: zoomIn 0.2s ease-out forwards; }
+        .animate-slide-in-left { animation: slideInLeft 0.3s ease-out forwards; }
+        .animate-slide-in-right { animation: slideInRight 0.3s ease-out forwards; }
+        .animate-pulse-soft { animation: pulseSoft 2s infinite ease-in-out; }
+
+        .stagger-item { opacity: 0; }
     </style>
 <script type="importmap">
 {
