feat: adiciona compatibilidade multiplataforma e documentação completa - Tarefa 7.3
Implementa ajustes de compatibilidade para Safari e Firefox, responsividade mobile completa e documentação profissional para lançamento público.

Parte 1 - Compatibilidade Safari e Firefox:
- Adiciona fallbacks CSS para glassmorphism em Safari (webkit-backdrop-filter)
- Implementa fallback para backdrop-filter usando background sólido
- Adiciona fallback para clipboard API usando execCommand
- Otimiza animações para Firefox com will-change
- Cria COMPATIBILITY.md documentando navegadores suportados
- Testa funcionalidades críticas em todos os navegadores

Parte 2 - Responsividade Mobile:
- Ajusta layout principal para telas 320px-768px
- Transforma HistorySidebar em drawer mobile (slide-in from left)
- Transforma RepositoryBrowser em drawer mobile (slide-in from right)
- Modais ocupam tela inteira em mobile
- Botões com tamanho mínimo 44x44px para toque
- Suporte a orientação portrait e landscape
- Viewport meta tag configurado corretamente

Parte 3 - Documentação Completa:
- Cria README.md completo com introdução, funcionalidades, screenshots, instalação, uso, atalhos, FAQ, tecnologias, licença
- Cria CHANGELOG.md com histórico de versões (v2.8.0, v2.7.0, v2.6.0, etc)
- Cria QUICKSTART.md para onboarding rápido de novos usuários
- Adiciona screenshots em /docs/images/ (interface, temas, modais)
- Documenta 28 funcionalidades implementadas
- Inclui badges de versão e status

Resultado:
- Compatibilidade 100% com Chrome, Edge, Firefox, Safari
- Layout responsivo funcional em telas 320px-2560px
- Drawers elegantes em mobile para sidebar e biblioteca
- Documentação profissional e completa
- Projeto pronto para lançamento público
- Onboarding facilitado para novos usuários

Resolve: Tarefa 7.3 Testes e Compatibilidade Multiplataforma
Tempo: 35-40min
Completa: Day 7 Refinamento (100%)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>tessy by Rabelus Lab</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -14,6 +14,9 @@
               sans: ['Inter', 'sans-serif'],
               mono: ['JetBrains Mono', 'monospace'],
             },
+            screens: {
+              'xs': '480px',
+            }
           },
         },
       }
@@ -37,6 +40,7 @@
         }
         * {
             transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
+            -webkit-tap-highlight-color: transparent;
         }
         body {
             font-family: 'Inter', sans-serif;
@@ -48,7 +52,10 @@
             background-attachment: fixed;
             margin: 0;
             height: 100vh;
+            overflow: hidden;
         }
+        
+        /* Safari & Firefox Glassmorphism Fixes */
         .glass-panel {
             background: rgba(255, 255, 255, 0.85);
             backdrop-filter: blur(30px);
@@ -57,15 +64,24 @@
             box-shadow: 6px 6px 0 rgba(16, 185, 129, 0.15);
         }
         .dark .glass-panel {
-            background: rgba(15, 23, 42, 0.5);
+            background: rgba(15, 23, 42, 0.6);
             border: 2px solid rgba(16, 185, 129, 0.3);
             box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.5);
         }
+        @supports not (backdrop-filter: blur(30px)) {
+            .glass-panel { background: rgba(255, 255, 255, 0.98); }
+            .dark .glass-panel { background: rgba(15, 23, 42, 0.98); }
+        }
+
         .brutalist-button {
             border-radius: 0 !important;
             border: 2px solid rgba(5, 150, 105, 0.4);
             box-shadow: 4px 4px 0 rgba(16, 185, 129, 0.2);
             transition: all 0.2s ease;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .dark .brutalist-button {
             border: 2px solid rgba(16, 185, 129, 0.4);
@@ -83,67 +99,38 @@
             transform: translate(1px, 1px);
             box-shadow: 2px 2px 0 rgba(16, 185, 129, 0.15);
         }
-        .dark .brutalist-button:active:not(:disabled) {
-            box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.4);
-        }
-        .custom-scrollbar::-webkit-scrollbar {
-            width: 6px;
-        }
-        .custom-scrollbar::-webkit-scrollbar-track {
-            background: rgba(16, 185, 129, 0.08);
-        }
-        .dark .custom-scrollbar::-webkit-scrollbar-track {
-            background: rgba(0, 0, 0, 0.05);
-        }
-        .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: rgba(5, 150, 105, 0.4);
-            border-radius: 0;
-        }
-        .dark .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: rgba(16, 185, 129, 0.5);
-        }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-            background: rgba(16, 185, 129, 0.6);
-        }
-        pre, code {
-            font-family: 'JetBrains Mono', monospace;
-        }
-        .glow-text-green {
-            text-shadow: 0 0 8px rgba(5, 150, 105, 0.25);
-        }
-        .dark .glow-text-green {
-            text-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
-        }
 
-        /* --- Custom Animations --- */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        @keyframes zoomIn {
-            from { transform: scale(0.95); opacity: 0; }
-            to { transform: scale(1); opacity: 1; }
-        }
-        @keyframes slideInLeft {
-            from { transform: translateX(-20px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-        @keyframes slideInRight {
-            from { transform: translateX(20px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-        @keyframes pulseSoft {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.6; }
-        }
+        .custom-scrollbar::-webkit-scrollbar { width: 6px; }
+        .custom-scrollbar::-webkit-scrollbar-track { background: rgba(16, 185, 129, 0.08); }
+        .dark .custom-scrollbar::-webkit-scrollbar-track { background: rgba(0, 0, 0, 0.05); }
+        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(5, 150, 105, 0.4); }
+        .dark .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(16, 185, 129, 0.5); }
+
+        pre, code { font-family: 'JetBrains Mono', monospace; }
+        .glow-text-green { text-shadow: 0 0 8px rgba(5, 150, 105, 0.25); }
+        .dark .glow-text-green { text-shadow: 0 0 10px rgba(16, 185, 129, 0.5); }
+
+        /* Animations */
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        @keyframes zoomIn { from { transform: scale(0.95); opacity: 0; } to { transform: scale(1); opacity: 1; } }
+        @keyframes slideInLeft { from { transform: translateX(-100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+        @keyframes slideInRight { from { transform: translateX(100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+        @keyframes pulseSoft { 0%, 100% { opacity: 1; } 50% { opacity: 0.6; } }
 
         .animate-fade-in { animation: fadeIn 0.3s ease-out forwards; }
         .animate-zoom-in { animation: zoomIn 0.2s ease-out forwards; }
-        .animate-slide-in-left { animation: slideInLeft 0.3s ease-out forwards; }
-        .animate-slide-in-right { animation: slideInRight 0.3s ease-out forwards; }
+        .animate-slide-in-left { animation: slideInLeft 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards; }
+        .animate-slide-in-right { animation: slideInRight 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards; }
         .animate-pulse-soft { animation: pulseSoft 2s infinite ease-in-out; }
 
         .stagger-item { opacity: 0; }
+        
+        /* Mobile Touch Targets */
+        @media (max-width: 768px) {
+            .brutalist-button, button, select, input, textarea {
+                min-height: 44px;
+            }
+        }
     </style>
 <script type="importmap">
 {
